--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,15 @@
 
 .card{
   background: white;
-  padding: 10px;
+  padding: 1rem;
   border-radius: 0.375rem;
   box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);;
+}
+h1{
+  font-weight: 700;
+  font-size: 2.25rem;
+}
+h3{
+  font-weight: 700;
+  font-size: 1.75rem;
 }
