--- a/public/style.css
+++ b/public/style.css
@@ -476,10 +476,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   grid-column-start: 2;
 }
 
-.col-start-4 {
-  grid-column-start: 4;
-}
-
 .col-start-5 {
   grid-column-start: 5;
 }
@@ -488,12 +484,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   grid-column-end: 2;
 }
 
-.col-end-4 {
-  grid-column-end: 4;
-}
-
 .col-end-5 {
   grid-column-end: 5;
+}
+
+.col-end-4 {
+  grid-column-end: 4;
 }
 
 .col-end-6 {
@@ -517,10 +513,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 1.75rem;
 }
 
-.mt-20 {
-  margin-top: 5rem;
-}
-
 .mt-5 {
   margin-top: 1.25rem;
 }
@@ -541,12 +533,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-right: 0.25rem;
 }
 
-.mb-3 {
-  margin-bottom: 0.75rem;
-}
-
 .mb-2 {
   margin-bottom: 0.5rem;
+}
+
+.mb-3 {
+  margin-bottom: 0.75rem;
 }
 
 .flex {
@@ -557,8 +549,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   display: grid;
 }
 
-.h-96 {
-  height: 24rem;
+.hidden {
+  display: none;
 }
 
 .h-60 {
@@ -575,6 +567,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .max-w-5xl {
   max-width: 64rem;
+}
+
+.resize {
+  resize: both;
 }
 
 .grid-cols-5 {
@@ -611,12 +607,22 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-bottom-width: calc(2px * var(--tw-divide-y-reverse));
 }
 
+.divide-y > :not([hidden]) ~ :not([hidden]) {
+  --tw-divide-y-reverse: 0;
+  border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
+  border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
 
 .rounded {
   border-radius: 0.25rem;
+}
+
+.border-2 {
+  border-width: 2px;
 }
 
 .border-x {
@@ -647,13 +653,30 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding: 0.5rem;
 }
 
+.p-3 {
+  padding: 0.75rem;
+}
+
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 }
 
+.px-20 {
+  padding-left: 5rem;
+  padding-right: 5rem;
+}
+
 .pt-2 {
   padding-top: 0.5rem;
+}
+
+.pl-2 {
+  padding-left: 0.5rem;
+}
+
+.pl-1 {
+  padding-left: 0.25rem;
 }
 
 .text-center {
@@ -689,6 +712,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
 }
 
+.primary-button{
+  color: white;
+  background-color: rgb(109 40 217);
+  border-radius: 0.25rem;
+  padding: 10px;
+  text-align: center;
+  font-weight: 500;
+  min-width: 5.5rem;
+}
+
 h1{
   font-weight: 700;
   font-size: 2.25rem;
@@ -699,11 +732,48 @@ h3{
   font-size: 1.75rem;
 }
 
+button{
+  display: inline-block;
+}
+
 main{
   max-width: 1700px;
   margin: 5rem auto;
 }
 
+#make-post form input{
+  display: block;
+}
+
+#make-post form input[type="text"]::-moz-placeholder{
+  font-size: 1.15rem;
+}
+
+#make-post form input[type="text"]:-ms-input-placeholder{
+  font-size: 1.15rem;
+}
+
+#make-post form input[type="text"]::placeholder{
+  font-size: 1.15rem;
+}
+
+form textarea::-moz-placeholder{
+  font-weight: 100;
+}
+
+form textarea:-ms-input-placeholder{
+  font-weight: 100;
+}
+
+form textarea::placeholder{
+  font-weight: 100;
+}
+
 .hover\:cursor-pointer:hover {
   cursor: pointer;
+}
+
+.focus\:border-green-400:focus {
+  --tw-border-opacity: 1;
+  border-color: rgb(74 222 128 / var(--tw-border-opacity));
 }
