--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,15 @@
   border-radius: 0.375rem;
   box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);;
 }
+.primary-button{
+  color: white;
+  background-color: rgb(109 40 217);
+  border-radius: 0.25rem;
+  padding: 10px;
+  text-align: center;
+  font-weight: 500;
+  min-width: 5.5rem;
+}
 h1{
   font-weight: 700;
   font-size: 2.25rem;
@@ -16,7 +25,19 @@ h3{
   font-weight: 700;
   font-size: 1.75rem;
 }
+button{
+  display: inline-block;
+}
 main{
   max-width: 1700px;
   margin: 5rem auto;
+}
+#make-post form input{
+  display: block;
+}
+#make-post form input[type="text"]::placeholder{
+  font-size: 1.15rem;
+}
+form textarea::placeholder{
+  font-weight: 100;
 }
