--- a/public/style.css
+++ b/public/style.css
@@ -488,10 +488,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   grid-column-end: 5;
 }
 
-.col-end-4 {
-  grid-column-end: 4;
-}
-
 .col-end-6 {
   grid-column-end: 6;
 }
@@ -539,6 +535,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .mb-3 {
   margin-bottom: 0.75rem;
+}
+
+.mt-6 {
+  margin-top: 1.5rem;
 }
 
 .flex {
@@ -611,6 +611,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-divide-y-reverse: 0;
   border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
   border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
+}
+
+.overflow-auto {
+  overflow: auto;
 }
 
 .rounded-full {
@@ -722,6 +726,15 @@ Ensure the default browser behavior of the `hidden` attribute.
   min-width: 5.5rem;
 }
 
+.post-title{
+  font-size: 1.2rem;
+  font-weight: 700;
+}
+
+.post-body{
+  font-size: 0.95rem;
+}
+
 h1{
   font-weight: 700;
   font-size: 2.25rem;
@@ -771,9 +784,4 @@ form textarea::placeholder{
 
 .hover\:cursor-pointer:hover {
   cursor: pointer;
-}
-
-.focus\:border-green-400:focus {
-  --tw-border-opacity: 1;
-  border-color: rgb(74 222 128 / var(--tw-border-opacity));
 }
