--- a/src/style.css
+++ b/src/style.css
@@ -17,6 +17,13 @@
   font-weight: 500;
   min-width: 5.5rem;
 }
+.post-title{
+  font-size: 1.2rem;
+  font-weight: 700;
+}
+.post-body{
+  font-size: 0.95rem;
+}
 h1{
   font-weight: 700;
   font-size: 2.25rem;
