--- a/public/style.css
+++ b/public/style.css
@@ -492,14 +492,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   grid-column-end: 6;
 }
 
-.row-start-1 {
-  grid-row-start: 1;
-}
-
-.row-start-2 {
-  grid-row-start: 2;
-}
-
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -511,6 +503,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .mt-5 {
   margin-top: 1.25rem;
+}
+
+.mt-6 {
+  margin-top: 1.5rem;
 }
 
 .mt-4 {
@@ -529,16 +525,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-right: 0.25rem;
 }
 
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
-
 .mb-3 {
   margin-bottom: 0.75rem;
 }
 
-.mt-6 {
-  margin-top: 1.5rem;
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mr-3 {
+  margin-right: 0.75rem;
+}
+
+.ml-1 {
+  margin-left: 0.25rem;
 }
 
 .flex {
@@ -567,6 +567,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .max-w-5xl {
   max-width: 64rem;
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .resize {
@@ -611,10 +615,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-divide-y-reverse: 0;
   border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
   border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
-}
-
-.overflow-auto {
-  overflow: auto;
 }
 
 .rounded-full {
@@ -683,6 +683,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-left: 0.25rem;
 }
 
+.pb-1 {
+  padding-bottom: 0.25rem;
+}
+
 .text-center {
   text-align: center;
 }
@@ -694,6 +698,26 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
+}
+
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .font-bold {
@@ -719,8 +743,8 @@ Ensure the default browser behavior of the `hidden` attribute.
 .primary-button{
   color: white;
   background-color: rgb(109 40 217);
-  border-radius: 0.25rem;
-  padding: 10px;
+  border-radius: 15px;
+  padding: 9px;
   text-align: center;
   font-weight: 500;
   min-width: 5.5rem;
@@ -754,6 +778,11 @@ main{
   margin: 5rem auto;
 }
 
+#make-post .card{
+  padding-right: 2rem;
+  padding-left: 2rem;
+}
+
 #make-post form input{
   display: block;
 }
@@ -784,4 +813,13 @@ form textarea::placeholder{
 
 .hover\:cursor-pointer:hover {
   cursor: pointer;
+}
+
+.hover\:underline:hover {
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+}
+
+.focus\:border-0:focus {
+  border-width: 0px;
 }
