--- a/public/style.css
+++ b/public/style.css
@@ -625,28 +625,26 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-radius: 0.25rem;
 }
 
-.border-2 {
-  border-width: 2px;
-}
-
-.border-x {
-  border-left-width: 1px;
-  border-right-width: 1px;
-}
-
-.border-white {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
-}
-
-.bg-slate-50 {
+.bg-slate-700 {
   --tw-bg-opacity: 1;
-  background-color: rgb(248 250 252 / var(--tw-bg-opacity));
+  background-color: rgb(51 65 85 / var(--tw-bg-opacity));
 }
 
-.bg-yellow-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 240 138 / var(--tw-bg-opacity));
+.bg-gradient-to-r {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+
+.from-indigo-500 {
+  --tw-gradient-from: #6366f1;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(99 102 241 / 0));
+}
+
+.via-purple-500 {
+  --tw-gradient-stops: var(--tw-gradient-from), #a855f7, var(--tw-gradient-to, rgb(168 85 247 / 0));
+}
+
+.to-pink-500 {
+  --tw-gradient-to: #ec4899;
 }
 
 .p-4 {
@@ -683,8 +681,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-left: 0.25rem;
 }
 
-.pb-1 {
-  padding-bottom: 0.25rem;
+.pl-0 {
+  padding-left: 0px;
 }
 
 .text-center {
@@ -705,16 +703,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 1rem;
 }
 
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
@@ -728,13 +716,21 @@ Ensure the default browser behavior of the `hidden` attribute.
   font-weight: 600;
 }
 
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 .no-underline {
   -webkit-text-decoration-line: none;
           text-decoration-line: none;
 }
 
+/* Utility Classes */
+
 .card{
-  background: white;
+  background: #2a2a2a;
+  box-shadow: -1rem 0 3rem #000;
   padding: 1rem;
   border-radius: 0.375rem;
   box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
@@ -742,12 +738,17 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .primary-button{
   color: white;
-  background-color: rgb(109 40 217);
-  border-radius: 15px;
+  background-color: #833eef;
+  border-radius: 10px;
   padding: 9px;
   text-align: center;
   font-weight: 500;
   min-width: 5.5rem;
+}
+
+.primary-button:hover{
+  background: #6d28d9;
+  transition: 0.25s;
 }
 
 .post-title{
@@ -773,10 +774,20 @@ button{
   display: inline-block;
 }
 
+/* Navbar */
+
+nav ul li:hover{
+  transition: 0.25s;
+  color: #833eef;
+  border-bottom: 3px solid #833eef;
+}
+
 main{
   max-width: 1700px;
   margin: 5rem auto;
 }
+
+/* Make POST */
 
 #make-post .card{
   padding-right: 2rem;
@@ -811,6 +822,10 @@ form textarea::placeholder{
   font-weight: 100;
 }
 
+#make-post textarea:focus, #make-post input:focus{
+  outline: none;
+}
+
 .hover\:cursor-pointer:hover {
   cursor: pointer;
 }
@@ -818,8 +833,4 @@ form textarea::placeholder{
 .hover\:underline:hover {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
-}
-
-.focus\:border-0:focus {
-  border-width: 0px;
 }
