--- a/src/style.css
+++ b/src/style.css
@@ -2,20 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Utility Classes */
 .card{
-  background: white;
+  background: #2a2a2a;
+  box-shadow: -1rem 0 3rem #000;
   padding: 1rem;
   border-radius: 0.375rem;
-  box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);;
+  box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
 }
 .primary-button{
   color: white;
-  background-color: rgb(109 40 217);
-  border-radius: 15px;
+  background-color: #833eef;
+  border-radius: 10px;
   padding: 9px;
   text-align: center;
   font-weight: 500;
   min-width: 5.5rem;
+}
+.primary-button:hover{
+  background: #6d28d9;
+  transition: 0.25s;
 }
 .post-title{
   font-size: 1.2rem;
@@ -35,10 +41,18 @@ h3{
 button{
   display: inline-block;
 }
+/* Navbar */
+nav ul li:hover{
+  transition: 0.25s;
+  color: #833eef;
+  border-bottom: 3px solid #833eef;
+}
+
 main{
   max-width: 1700px;
   margin: 5rem auto;
 }
+/* Make POST */
 #make-post .card{
   padding-right: 2rem;
   padding-left: 2rem;
@@ -52,4 +66,7 @@ main{
 }
 form textarea::placeholder{
   font-weight: 100;
+}
+#make-post textarea:focus, #make-post input:focus{
+  outline: none;
 }
