--- a/src/style.css
+++ b/src/style.css
@@ -44,10 +44,17 @@ button{
 /* Navbar */
 nav ul li:hover{
   transition: 0.25s;
-  color: #833eef;
-  border-bottom: 3px solid #833eef;
+  color: #a16df3;
+  border-bottom: 3px solid #a16df3;
 }
-
+#user-icon:hover > div{
+  display: block;
+  top: 3.2rem;
+  left: -0.5rem; 
+  background: #2a2a2a;
+  padding: 0.5rem 0.5rem;
+  border-radius: 10px;
+}
 main{
   max-width: 1700px;
   margin: 5rem auto;
