--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,36 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Social Forum for VIT Bhopal</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="https://kit.fontawesome.com/c50b62b617.js" crossorigin="anonymous"></script>
-</head>
-
-<body class=" border-box text-white" style="background-color: #131313;">
+<%- include("./partials/header"); -%>
   <!-- Navbar -->
-  <nav class="mx-auto max-w-5xl mt-7 card">
-    <div class="flex flex-row justify-between">
-      <div id="logo" class="pt-2">
-        <h1 class="font-bold text-3xl">VIT Bhopal Social Forum</h1>
-      </div>
-      <ul class="flex flex-row">  
-        <li class="p-4"><a href="" class="no-underline">Home</a></li>
-        <li class="p-4"><a href="" class="no-underline">Materials</a></li>
-        <li class="p-4"><a href="" class="no-underline">Events</a></li>
-        <li class="p-4"><a href="" class="no-underline">Contact</a></li>
-        <li class="p-4 relative" id="user-icon"><i class="fas fa-user hover:cursor-pointer"></i>
-          <div class="hidden absolute  w-16 flex-col text-center">
-            <a href="" class="decoration-0 block text-white hover:text-inherit">Profile</a>
-            <a href="" class="decoration-0 block pt-3 mb-2 text-white hover:text-inherit">Posts</a>
-          </div>
-        </li>
-        <li class="p-4"><i class="fas fa-power-off hover:cursor-pointer"></i></li> 
-      </ul>
+<nav class="mx-auto max-w-5xl mt-7 card">
+  <div class="flex flex-row justify-between">
+    <div id="logo" class="pt-2">
+      <h1 class="font-bold text-3xl">VIT Bhopal Social Forum</h1>
     </div>
-  </nav>
+    <ul class="flex flex-row">  
+      <li class="p-4"><a href="" class="no-underline">Home</a></li>
+      <li class="p-4"><a href="" class="no-underline">Materials</a></li>
+      <li class="p-4"><a href="" class="no-underline">Events</a></li>
+      <li class="p-4"><a href="" class="no-underline">Contact</a></li>
+      <li class="p-4 relative" id="user-icon"><i class="fas fa-user hover:cursor-pointer"></i>
+        <div class="hidden absolute  w-20 flex-col text-center">
+          <a href="" class="decoration-0 block text-white hover:text-inherit">Profile</a>
+          <a href="" class="decoration-0 block pt-3 mb-2 text-white hover:text-inherit">Posts</a>
+        </div>
+      </li>
+      <li class="p-4"><i class="fas fa-power-off hover:cursor-pointer"></i></li> 
+    </ul>
+  </div>
+</nav>
 
   <main class="grid grid-cols-5 gap-5">
     <div class="col-start-1 col-end-2">
@@ -65,7 +54,7 @@
       <!-- Section to make Posts -->
       <section id="make-post" class="px-20">
         <div class="card">
-          <form action="" method="post" class="divide-y mt-3 mb-3">
+          <form action="" method="post" class="divide-y mt-3 mb-0">
             <div class="pl-2 pt-2">
               <input type="text" name="title" id="title" placeholder="Title" class="mb-2 pl-1" style="width: 100%; background-color: #2a2a2a">
               <textarea name="body" id="body" placeholder="Write a description..." style="width: 100%; min-height: 6.2rem; resize: none; background-color: #2a2a2a" class="pl-1"></textarea>
@@ -180,5 +169,4 @@
       </section>
     </div>
   </main>
-</body>
-</html>
+<%- include("./partials/footer"); -%>
