--- a/views/home.ejs
+++ b/views/home.ejs
@@ -21,7 +21,7 @@
   </div>
 </nav>
 
-  <main class="grid grid-cols-5 gap-5">
+  <main class="grid grid-cols-5 gap-5" id="home-page">
     <div class="col-start-1 col-end-2">
       <!-- Name and profile picture section  -->
       <section id="user-picture" class=" flex flex-col items-center">
