--- a/public/style.css
+++ b/public/style.css
@@ -505,6 +505,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-right: auto;
 }
 
+.mt-7 {
+  margin-top: 1.75rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
 .mt-5 {
   margin-top: 1.25rem;
 }
@@ -533,10 +541,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-bottom: 0px;
 }
 
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
-
 .mr-3 {
   margin-right: 0.75rem;
 }
@@ -549,8 +553,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-bottom: 0.75rem;
 }
 
-.mt-7 {
-  margin-top: 1.75rem;
+.mt-80 {
+  margin-top: 20rem;
+}
+
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem;
 }
 
 .block {
@@ -577,24 +589,28 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 0.75rem;
 }
 
+.w-20 {
+  width: 5rem;
+}
+
 .w-60 {
   width: 15rem;
 }
 
-.w-20 {
-  width: 5rem;
+.w-full {
+  width: 100%;
 }
 
 .max-w-5xl {
   max-width: 64rem;
 }
 
-.max-w-md {
-  max-width: 28rem;
+.max-w-2xl {
+  max-width: 42rem;
 }
 
-.max-w-lg {
-  max-width: 32rem;
+.max-w-xl {
+  max-width: 36rem;
 }
 
 .cursor-pointer {
@@ -623,10 +639,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .items-center {
   align-items: center;
-}
-
-.justify-center {
-  justify-content: center;
 }
 
 .justify-between {
@@ -679,16 +691,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-gradient-to: #ec4899;
 }
 
+.p-4 {
+  padding: 1rem;
+}
+
 .p-2 {
   padding: 0.5rem;
 }
 
 .p-3 {
   padding: 0.75rem;
-}
-
-.p-4 {
-  padding: 1rem;
 }
 
 .px-2 {
@@ -701,12 +713,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-right: 5rem;
 }
 
-.pl-2 {
-  padding-left: 0.5rem;
-}
-
 .pt-2 {
   padding-top: 0.5rem;
+}
+
+.pt-3 {
+  padding-top: 0.75rem;
+}
+
+.pl-2 {
+  padding-left: 0.5rem;
 }
 
 .pl-1 {
@@ -717,16 +733,21 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-left: 0px;
 }
 
-.pt-3 {
-  padding-top: 0.75rem;
-}
-
 .text-center {
   text-align: center;
 }
 
 .text-justify {
   text-align: justify;
+}
+
+.font-mono {
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .text-xs {
@@ -737,11 +758,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
-}
-
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
 }
 
 .font-bold {
@@ -796,6 +812,19 @@ Ensure the default browser behavior of the `hidden` attribute.
   transition: 0.25s;
 }
 
+.secondary-button{
+  color: white;
+  background: #2a2a2a;
+  border: 2px solid #833eef;
+  text-align: center;
+  padding: 9px;
+  border-radius: 10px;
+}
+
+.secondary-button:hover{
+  color: rgb(167 139 250) ;
+}
+
 .post-title{
   font-size: 1.2rem;
   font-weight: 700;
@@ -836,7 +865,7 @@ nav ul li:hover{
   border-radius: 10px;
 }
 
-main{
+#home-page{
   max-width: 1700px;
   margin: 5rem auto;
 }
@@ -880,17 +909,36 @@ form textarea::placeholder{
   outline: none;
 }
 
+/* LOGIN Page */
+
+#login-page input, #login-page label{
+  display: block;
+}
+
+#login-page label{
+  font-size: 1.5rem;
+}
+
+#login-page input{
+  background: #2a2a2a;
+  border: 2px solid #833eef;
+}
+
+#login-page input:focus{
+  outline: none;
+}
+
 .hover\:cursor-pointer:hover {
   cursor: pointer;
+}
+
+.hover\:text-inherit:hover {
+  color: inherit;
 }
 
 .hover\:text-violet-400:hover {
   --tw-text-opacity: 1;
   color: rgb(167 139 250 / var(--tw-text-opacity));
-}
-
-.hover\:text-inherit:hover {
-  color: inherit;
 }
 
 .hover\:underline:hover {
