--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,23 +2,22 @@
   <!-- Login page -->
 
   <main id="login-page" class="mt-80 font-mono">
-    <form action="" method="post" class="card mx-auto max-w-xl">
+    <form action="" method="post" class="card mx-auto max-w-lg">
       <div class="p-3">
         <h1 class="text-center">Welcome</h1>
         <div class="mt-3">
           <label for="user-email" class="mb-2">Email</label>
-          <input type="email" id="user-email" placeholder="Enter email id... " class="rounded w-full p-2">
+          <input type="email" id="user-email" placeholder="Enter email id... " class="border-violet-500 border-2 rounded w-full p-2">
         </div>
         <div class="mt-4 mb-6">
           <label for="user-password" class="mb-2"> Password</label>
-          <input type="password" id="user-password" placeholder="Enter password..." class="rounded w-full p-2">
+          <input type="password" id="user-password" placeholder="Enter password..." class="border-violet-500 border-2 rounded w-full p-2">
         </div>
-        <div class="flex flex-col mb-5">
-          <button type="submit" class="primary-button mb-3">Log-In</button>
-          <p class="text-center mb-3">OR</p>
-          <a href="/register" class="secondary-button">Sign-Up</a>
+        <button type="submit" class="primary-button mb-3 w-full">Log-In</button>
+        <div class="flex flex-row justify-between mt-5">
+          <p class="inline-block">Don't have an account? <a href="/register" class="font-bold text-violet-400 hover:cursor-pointer "> Sign up</a></p>
+          <a class="hover:text-violet-500 cursor-pointer">Forgot Password</a>
         </div>
-        <a class="hover:text-violet-400 relative w-full cursor-pointer" style="left: 74%">Forgot Password</a>
       </div>
     </form>
   </main>
