--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,26 +1,6 @@
 <%- include("./partials/header"); -%>
-  <!-- Navbar -->
-<nav class="mx-auto max-w-5xl mt-7 card">
-  <div class="flex flex-row justify-between">
-    <div id="logo" class="pt-2">
-      <h1 class="font-bold text-3xl">VIT Bhopal Social Forum</h1>
-    </div>
-    <ul class="flex flex-row">  
-      <li class="p-4"><a href="" class="no-underline">Home</a></li>
-      <li class="p-4"><a href="" class="no-underline">Materials</a></li>
-      <li class="p-4"><a href="" class="no-underline">Events</a></li>
-      <li class="p-4"><a href="" class="no-underline">Contact</a></li>
-      <li class="p-4 relative" id="user-icon"><i class="fas fa-user hover:cursor-pointer"></i>
-        <div class="hidden absolute  w-20 flex-col text-center">
-          <a href="" class="decoration-0 block text-white hover:text-inherit">Profile</a>
-          <a href="" class="decoration-0 block pt-3 mb-2 text-white hover:text-inherit">Posts</a>
-        </div>
-      </li>
-      <li class="p-4"><i class="fas fa-power-off hover:cursor-pointer"></i></li> 
-    </ul>
-  </div>
-</nav>
-
+  
+  <%- include("./partials/navbar"); -%>
   <main class="grid grid-cols-5 gap-5" id="home-page">
     <div class="col-start-1 col-end-2">
       <!-- Name and profile picture section  -->
