--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,11 +7,11 @@
         <h1 class="text-center">Welcome</h1>
         <div class="mt-3">
           <label for="user-email" class="mb-2">Email</label>
-          <input type="email" id="user-email" placeholder="Enter email id... " class="border-violet-500 border-2 rounded w-full p-2">
+          <input type="email" id="user-email" name="userEmail" placeholder="Enter email id... " class="border-violet-500 border-2 rounded w-full p-2">
         </div>
         <div class="mt-4 mb-6">
           <label for="user-password" class="mb-2"> Password</label>
-          <input type="password" id="user-password" placeholder="Enter password..." class="border-violet-500 border-2 rounded w-full p-2">
+          <input type="password" id="user-password" name="userPassword" placeholder="Enter password..." class="border-violet-500 border-2 rounded w-full p-2">
         </div>
         <button type="submit" class="primary-button mb-3 w-full">Log-In</button>
         <div class="flex flex-row justify-between mt-5">
@@ -21,5 +21,8 @@
       </div>
     </form>
   </main>
+  <div id="register-output" class="font-extrabold text-center text-<%= status %>-500 mx-auto mt-4 p-3">
+    <%= message %>
+  </div>
 
 <%- include("./partials/footer"); -%>
