--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,7 @@
     <div class="col-start-1 col-end-2">
       <!-- Name and profile picture section  -->
       <section id="user-picture" class=" flex flex-col items-center">
-        <img src="./images/Resume Photo.jpg" alt="image could not be loaded" class="rounded-full h-60 w-60 ">
+        <img src="/images/Resume Photo.jpg" alt="image could not be loaded" class="rounded-full h-60 w-60 ">
         <h1 class="mt-5 text-white">Eshaan Bahuguna</h1>
       </section>
       
