--- a/views/home.ejs
+++ b/views/home.ejs
@@ -149,4 +149,40 @@
       </section>
     </div>
   </main>
+  <div id="user-profile-wrapper" class="hidden">
+    <section id="user-profile" class="card max-w-7xl mx-auto">
+      <i class="fas fa-times fa-2x hover:text-violet-500 hover:cursor-pointer"></i>
+      <div id="Name" class="grid grid-cols-2 gap-10 mb-4 pr-20">
+        <div>
+          <label for="first-name" class="block mb-2 text-xl">First Name</label>
+          <input type="text" name="firstName" id="first-name" class="border-2 rounded border-gray-500 focus:outline-none focus:border-violet-500 w-9/12 p-2" autocomplete="off">
+        </div>
+        <div>
+          <label for="last-name" class="block mb-2 text-xl">Last Name</label>
+          <input type="text" name="lastName" id="last-name" class="border-2 rounded border-gray-500 focus:outline-none focus:border-violet-500 w-9/12 p-2" autocomplete="off">
+        </div>
+      </div>
+      <div class="mb-3">
+        <label for="about-me" class="block mb-2 text-xl">About Me</label>
+        <textarea name="aboutMe" id="about-me" style="width: 100%; min-height: 6.2rem; resize: none; background-color: #2a2a2a" class="border-2 rounded border-gray-500 focus:outline-none focus:border-violet-500 p-2"></textarea>
+      </div>
+      <div class="mb-4">
+        <label for="hobbies" class="block mb-2 text-xl">Hobbies <span class="text-zinc-400 italic text-base">(seperated by commas)</span> </label>
+        <input type="text" name="hobbies" id="hobbies" class="border-2 rounded border-gray-500 focus:outline-none focus:border-violet-500 w-full p-2">
+      </div>
+      <div id="user-skills-section">
+        <label for="skills" class="block mb-2 text-xl">Skills</label>
+        <div class="flex flex-row">
+          <input type="text" name="" id="" class="border-2 rounded border-gray-500 focus:outline-none focus:border-violet-500 w-80 p-2 skill-name"> 
+          <div class="ml-5">
+            Proficiency <span class="text-zinc-400 italic text-base">(out of 10)</span>
+            <input type="number" name="" id="" class="border-2 rounded border-gray-500 focus:outline-none focus:border-violet-500 w-20 p-2 skill-proficiency">
+          </div>
+        </div>
+        <a href="" class="block mt-4 pt-2 underline text-violet-500 text-lg underline-offset-4" id="add-skill-button">Add Skill</a>
+      </div>
+      <button class="primary-button block mx-auto mt-5">Update Profile</button>
+    </section>
+    <script src="/app.js"></script>
+  </div>
 <%- include("./partials/footer"); -%>
