--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -11,8 +11,8 @@
         <li class="p-4"><a href="/contact" class="no-underline">Contact</a></li>
         <li class="p-4 relative" id="user-icon"><i class="fas fa-user hover:cursor-pointer"></i>
           <div class="hidden absolute  w-20 flex-col text-center">
-            <a href="" class="decoration-0 block text-white hover:text-inherit">Profile</a>
-            <a href="" class="decoration-0 block pt-3 mb-2 text-white hover:text-inherit">Posts</a>
+            <a href="" class="decoration-0 block text-white hover:text-inherit" id="user-profile-button">Profile</a>
+            <a href="" class="decoration-0 block pt-3 mb-2 text-white hover:text-inherit" id="user-posts-button">Posts</a>
           </div>
         </li>
         <li class="p-4"><i class="fas fa-power-off hover:cursor-pointer"></i></li> 
