--- a/views/home.ejs
+++ b/views/home.ejs
@@ -173,10 +173,10 @@
       <div id="user-skills-section">
         <label for="skills" class="block mb-2 text-xl">Skills</label>
         <div class="flex flex-row">
-          <input type="text" name="" id="" class="border-2 rounded border-gray-500 focus:outline-none focus:border-violet-500 w-80 p-2 skill-name"> 
+          <input type="text" name="" class="border-2 rounded border-gray-500 focus:outline-none focus:border-violet-500 w-80 p-2 skill-name"> 
           <div class="ml-5">
             Proficiency <span class="text-zinc-400 italic text-base">(out of 10)</span>
-            <input type="number" name="" id="" class="border-2 rounded border-gray-500 focus:outline-none focus:border-violet-500 w-20 p-2 skill-proficiency">
+            <input type="number" name="" class="border-2 rounded border-gray-500 focus:outline-none focus:border-violet-500 w-20 p-2 skill-proficiency">
           </div>
         </div>
         <a href="" class="block mt-4 pt-2 underline text-violet-500 text-lg underline-offset-4" id="add-skill-button">Add Skill</a>
