--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,2 +1,30 @@
 </body>
+<footer>
+  <section id="contact-section grid grid-cols-3">
+    <div class="col-span-1 col-end-2">
+      <i class="fas fa-phone-alt fa-2x block mb-4 mt-5"></i>
+      <ul class="mb-2">
+        <li class="mb-2">+91 7982-951-689</li>
+        <li class="mb-2">+91 9352-163-914</li>
+        <li class="mb-2">+91 6395-680-797</li>
+      </ul>
+    </div>
+    <div class="col-span-2 col-end-3">
+      <i class="fas fa-envelope fa-2x block mb-4 mt-5"></i>
+      <ul class="pl-4 mb-5">
+        <li class="mb-2">eshaan.bahuguna2019@vitbhopal.ac.in</li>
+        <li class="mb-2">asmi.bhardwaj2019@vitbhopal.ac.in</li>
+        <li class="mb-2">parth.sarthi2019@vitbhopal.ac.in</li>
+      </ul>
+    </div>
+    <div id="contact-form" class="flex flex-col items-center col-span-3 col-end-4">
+      <h3 class="mb-5">Write your message to us</h3>
+      <form action="" method="post">
+        <input type="text" name="name" id="contact-name" placeholder="Name" class="mb-5 p-2 border-b-4 border-b-violet-500" autocomplete="off">
+        <input type="email" name="email" id="contact-email" placeholder="Email" class="mb-5 p-2" autocomplete="off">
+        <textarea name="message" id="contact-message" placeholder="Message" style="resize: none; width: 50rem; min-height: 8rem;" class="mt-6 p-2 rounded"></textarea>
+      </form>
+    </div>
+  </section>
+</footer>
 </html>
