--- a/public/style.css
+++ b/public/style.css
@@ -476,6 +476,18 @@ Ensure the default browser behavior of the `hidden` attribute.
   position: relative;
 }
 
+.col-span-1 {
+  grid-column: span 1 / span 1;
+}
+
+.col-span-2 {
+  grid-column: span 2 / span 2;
+}
+
+.col-span-3 {
+  grid-column: span 3 / span 3;
+}
+
 .col-start-1 {
   grid-column-start: 1;
 }
@@ -492,6 +504,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   grid-column-end: 2;
 }
 
+.col-end-3 {
+  grid-column-end: 3;
+}
+
+.col-end-4 {
+  grid-column-end: 4;
+}
+
 .col-end-5 {
   grid-column-end: 5;
 }
@@ -505,12 +525,28 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-right: auto;
 }
 
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
 .mt-5 {
   margin-top: 1.25rem;
 }
 
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+
 .mt-6 {
   margin-top: 1.5rem;
+}
+
+.mt-7 {
+  margin-top: 1.75rem;
 }
 
 .mt-4 {
@@ -533,10 +569,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-bottom: 0px;
 }
 
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
-
 .mr-3 {
   margin-right: 0.75rem;
 }
@@ -547,10 +579,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .mb-3 {
   margin-bottom: 0.75rem;
-}
-
-.mb-4 {
-  margin-bottom: 1rem;
 }
 
 .ml-5 {
@@ -569,16 +597,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 5rem;
 }
 
-.mb-5 {
-  margin-bottom: 1.25rem;
-}
-
 .mb-8 {
   margin-bottom: 2rem;
-}
-
-.mt-7 {
-  margin-top: 1.75rem;
 }
 
 .block {
@@ -609,6 +629,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 0.75rem;
 }
 
+.w-20 {
+  width: 5rem;
+}
+
 .w-60 {
   width: 15rem;
 }
@@ -625,8 +649,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 20rem;
 }
 
-.w-20 {
-  width: 5rem;
+.max-w-5xl {
+  max-width: 64rem;
 }
 
 .max-w-7xl {
@@ -637,10 +661,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   max-width: 32rem;
 }
 
-.max-w-5xl {
-  max-width: 64rem;
-}
-
 .cursor-pointer {
   cursor: pointer;
 }
@@ -649,16 +669,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   resize: both;
 }
 
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
 .grid-cols-5 {
   grid-template-columns: repeat(5, minmax(0, 1fr));
 }
 
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
-.grid-cols-3 {
-  grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
 .flex-row {
@@ -697,16 +717,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
 }
 
-.rounded-full {
-  border-radius: 9999px;
-}
-
 .rounded {
   border-radius: 0.25rem;
 }
 
+.rounded-full {
+  border-radius: 9999px;
+}
+
 .border-2 {
   border-width: 2px;
+}
+
+.border-b-4 {
+  border-bottom-width: 4px;
 }
 
 .border-gray-500 {
@@ -717,6 +741,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .border-violet-500 {
   --tw-border-opacity: 1;
   border-color: rgb(139 92 246 / var(--tw-border-opacity));
+}
+
+.border-b-violet-500 {
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(139 92 246 / var(--tw-border-opacity));
 }
 
 .bg-slate-700 {
@@ -745,12 +774,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding: 0.5rem;
 }
 
-.p-3 {
-  padding: 0.75rem;
-}
-
 .p-4 {
   padding: 1rem;
+}
+
+.p-3 {
+  padding: 0.75rem;
 }
 
 .px-2 {
@@ -768,12 +797,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-right: 1.5rem;
 }
 
-.pl-2 {
-  padding-left: 0.5rem;
+.pl-4 {
+  padding-left: 1rem;
 }
 
 .pt-2 {
   padding-top: 0.5rem;
+}
+
+.pt-3 {
+  padding-top: 0.75rem;
+}
+
+.pl-2 {
+  padding-left: 0.5rem;
 }
 
 .pl-1 {
@@ -788,10 +825,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-right: 5rem;
 }
 
-.pt-3 {
-  padding-top: 0.75rem;
-}
-
 .text-center {
   text-align: center;
 }
@@ -802,6 +835,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .font-mono {
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .text-xs {
@@ -832,11 +870,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
-}
-
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
 }
 
 .font-bold {
@@ -1040,7 +1073,7 @@ form textarea::placeholder{
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.9);
+  background: rgba(0, 0, 0, 0.8);
   -webkit-backdrop-filter: blur(8px);
           backdrop-filter: blur(8px);
 }
@@ -1059,6 +1092,37 @@ form textarea::placeholder{
   bottom: 1.5rem;
 }
 
+/* FOOTER section */
+
+#contact-section{
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+}
+
+#contact-section > div:first-child{
+  background-color: #000;
+}
+
+#contact-form input, #contact-form textarea{
+  display: block;
+}
+
+#contact-form input{
+  width: 25rem;
+  margin-left: 13rem;
+  background: #131313;
+  border-bottom: 2px;
+  border-bottom-color: violet;
+}
+
+#contact-form input:focus{
+  outline: none;
+}
+
+#contact-form textarea{
+  background: #2a2a2a;
+}
+
 /* LOGIN Page */
 
 #login-page input, #login-page label{
@@ -1071,7 +1135,6 @@ form textarea::placeholder{
 
 #login-page input, #register-page input{
   background: #2a2a2a;
-  /* border: 2px solid #833eef; */
 }
 
 #login-page input:focus, #register-page input:focus{
@@ -1088,14 +1151,12 @@ form textarea::placeholder{
   height: 0.15rem;
 }
 
-/* .primary-text{
-  background: linear-gradient(360deg, #6366f1, #a855f7, #ec4899);
-  background-clip: text;
-  color: transparent;
-} */
-
 .hover\:cursor-pointer:hover {
   cursor: pointer;
+}
+
+.hover\:text-inherit:hover {
+  color: inherit;
 }
 
 .hover\:text-violet-400:hover {
@@ -1106,10 +1167,6 @@ form textarea::placeholder{
 .hover\:text-violet-500:hover {
   --tw-text-opacity: 1;
   color: rgb(139 92 246 / var(--tw-text-opacity));
-}
-
-.hover\:text-inherit:hover {
-  color: inherit;
 }
 
 .hover\:underline:hover {
@@ -1126,3 +1183,4 @@ form textarea::placeholder{
   outline: 2px solid transparent;
   outline-offset: 2px;
 }
+
