Fixed a bug in logging in after registering a new account.
-Divided the validation of registering a new account from server-side
to both client and server-side validation.

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,10 +20,10 @@
         </div>
       </div>
     </form>
+    <div id="login-output" class="font-extrabold text-center text-red-500 mx-auto mt-4 p-3">
+      <%= message %>
+    </div>
   </main>
-  <div id="register-output" class="font-extrabold text-center text-<%= status %>-500 mx-auto mt-4 p-3">
-    <%= message %>
-  </div>
 
 </body>
 </html>
