--- a/views/home.ejs
+++ b/views/home.ejs
@@ -78,6 +78,15 @@
               <li class="hover:text-violet-400 cursor-pointer"><i class="far fa-comment-alt"></i><span class="ml-1">5</span></li>
             </ul>
           </div>
+          <div class="card p-3 mt-3">
+            <p class="text-xs">posted by <span class="hover:underline cursor-pointer text-violet-400">PrincessXyu</span></p>
+            <p class="post-title">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore eveniet facilis sequi alias consequuntur praesentium exercitationem quasi libero necessitatibus reiciendis?</p>
+            <p class="post-body mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae nam doloribus quia necessitatibus voluptatum qui enim, dicta porro soluta placeat voluptas nemo omnis numquam quidem nesciunt possimus. Neque, nulla provident?</p>
+            <ul class="flex flex-row mt-2 text-base">
+              <li class="mr-3 hover:text-violet-400 cursor-pointer"><i class="fas fa-heart hover:text-violet-400"></i><span class="ml-1">113</span</li>
+              <li class="hover:text-violet-400 cursor-pointer"><i class="far fa-comment-alt"></i><span class="ml-1">5</span></li>
+            </ul>
+          </div>
         </div>
       </section>
     </div>
