--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -5,10 +5,10 @@
         <h1 class="font-bold text-3xl">VIT Bhopal Social Forum</h1>
       </div>
       <ul class="flex flex-row">  
-        <li class="p-4"><a href="/home" class="no-underline">Home</a></li>
+        <li class="p-4"><a href="" class="no-underline">Home</a></li>
         <li class="p-4"><a href="" class="no-underline">Materials</a></li>
         <li class="p-4"><a href="/events" class="no-underline">Events</a></li>
-        <li class="p-4"><a href="/contact" class="no-underline">Contact</a></li>
+        <li class="p-4"><a href="#contact-section" class="no-underline">Contact</a></li>
         <li class="p-4 relative" id="user-icon"><i class="fas fa-user hover:cursor-pointer"></i>
           <div class="hidden absolute  w-20 flex-col text-center">
             <a href="" class="decoration-0 block text-white hover:text-inherit" id="user-profile-button">Profile</a>
