--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,8 @@
 </body>
-<footer>
+<footer class="mt-12">
   <section id="contact-section" class="font-mono" style="background: #2a2a2a">
     <div class="flex flex-col pt-5">
-      <h1 class="text-center font-sans">For <i>Direct Queries</i>, reach out on</h1>
+      <h1 class="text-center"> <i>Contact Us</i></h1>
       <div class="flex flex-row justify-between mb-3 pt-16 px-64">
         <div class="flex flex-col items-center">
           <i class="fas fa-mobile-alt fa-5x block mb-8 mt-3"></i>
@@ -21,10 +21,11 @@
           </ul>
         </div>
       </div>
-      <p class="text-center"><i class="fas fa-map-marker-alt"></i> Vellore Institute of Technology, Bhopal, Madhya Pradesh, India</p>
+      <p class="text-center"><i class="fas fa-map-marker-alt"></i> Vellore Institute of Technology, Bhopal </p>
+      <p class="text-center">Madhya Pradesh, India</p>
     </div>
     <div id="contact-form" class="flex flex-col items-center pt-5">
-      <h1 class="mb-5 text-center font-sans">Write your <i>queries/feedback</i> to us</h1>
+      <h1 class="mb-5 text-center">Write your <i>queries/feedback</i> to us</h1>
       <form action="/contact" method="post" class="mt-6">
         <input type="text" name="name" id="contact-name" placeholder="Name" class="mb-5 pb-3 pl-2 border-b-4 border-b-violet-500 w-80 mx-auto" autocomplete="off">
         <input type="email" name="email" id="contact-email" placeholder="Email" class="mb-5 p-2 border-b-4 border-b-violet-500 w-80 mx-auto" autocomplete="off">
