--- a/public/style.css
+++ b/public/style.css
@@ -603,6 +603,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-left: 15rem;
 }
 
+.ml-10 {
+  margin-left: 2.5rem;
+}
+
 .block {
   display: block;
 }
