--- a/src/style.css
+++ b/src/style.css
@@ -115,7 +115,7 @@ form textarea::placeholder{
 #user-profile input{
   background: #2a2a2a
 }
-#user-profile i{
+#user-profile-cancel-button{
   position: relative; 
   left: 36rem; 
   bottom: 1.5rem;
