--- a/views/home.ejs
+++ b/views/home.ejs
@@ -130,7 +130,7 @@
   </main>
   <div id="user-profile-wrapper" class="hidden">
     <section id="user-profile" class="card max-w-7xl mx-auto">
-      <i class="fas fa-times fa-2x hover:text-violet-500 hover:cursor-pointer"></i>
+      <i class="fas fa-times fa-2x hover:text-violet-500 hover:cursor-pointer" id="user-profile-cancel-button"></i>
       <div id="Name" class="grid grid-cols-2 gap-10 mb-4 pr-20">
         <div>
           <label for="first-name" class="block mb-2 text-xl">First Name</label>
@@ -158,7 +158,17 @@
             <input type="number" name="" class="border-2 rounded border-gray-500 focus:outline-none focus:border-violet-500 w-20 p-2 skill-proficiency">
           </div>
         </div>
-        <a href="" class="block mt-4 pt-2 underline text-violet-500 text-lg underline-offset-4" id="add-skill-button">Add Skill</a>
+        <div class="flex flex-row justify-between">
+          <a href="" class="block mt-4 pt-2 underline text-violet-500 text-lg underline-offset-4" id="add-skill-button">Add Skill</a>
+          <div>
+            <a href="" class="block mt-4 pt-2 underline text-violet-500 text-lg underline-offset-4" id="delete-skill-button">Delete Skills</a>
+            <a href="" class="block mt-4 pt-2 underline text-violet-500 text-lg underline-offset-4" id="delete-hobbies-button">Delete Hobbies</a>
+          </div>
+        </div>
+      </div>
+      <div class="border-t-2 border-t-slate-500 mt-6 pt-3 hidden" id="all-hobbies">
+        <ul class="text-center text-white">
+        </ul>
       </div>
       <button class="primary-button block mx-auto mt-5">Update Profile</button>
     </section>
