Delete Skills option added

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -95,7 +95,7 @@
     <div class="col-start-5 col-end-6">
       <!-- Skills section -->
       <section id="skills" class=" card">
-        <h3 class="mb-3 text-center">Skills</h3>
+        <!-- Skills will be displayed here via JavaScript -->
       </section>
   
       <!-- Events section -->
@@ -161,13 +161,19 @@
         <div class="flex flex-row justify-between">
           <a href="" class="block mt-4 pt-2 underline text-violet-500 text-lg underline-offset-4" id="add-skill-button">Add Skill</a>
           <div>
-            <a href="" class="block mt-4 pt-2 underline text-violet-500 text-lg underline-offset-4" id="delete-skill-button">Delete Skills</a>
+            <a href="" class="block mt-4 pt-2 underline text-violet-500 text-lg underline-offset-4" id="delete-skills-button">Delete Skills</a>
             <a href="" class="block mt-4 pt-2 underline text-violet-500 text-lg underline-offset-4" id="delete-hobbies-button">Delete Hobbies</a>
           </div>
         </div>
       </div>
       <div class="border-t-2 border-t-slate-500 mt-6 pt-3 hidden" id="all-hobbies">
         <ul class="text-center text-white">
+          <!-- All hobbies will be displayed here -->
+        </ul>
+      </div>
+      <div class="border-t-2 border-t-slate-500 mt-6 pt-3 hidden" id="all-skills">
+        <ul class="text-center text-white">
+          <!-- All skills will be displayed here -->
         </ul>
       </div>
       <button class="primary-button block mx-auto mt-5">Update Profile</button>
